--- a/newtab.html
+++ b/newtab.html
@@ -62,8 +62,18 @@
                 </a>
             </div>
             <br/>
-            <div class="row">
-                <div id="consumed-food-details">
+            <div class="row dark-border">
+                <div id="add-food-details">
+
+                    <div class="row">
+                        <!--<input type='button' id='addFoodButton' value='Add Food'>-->
+                        <a id="addFoodButton" href="#" class="btn btn-primary a-btn-slide-text">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            <span><strong>Add Food</strong></span>
+                        </a>
+                    </div>
+                    <br/>
+
                     <div class="card dark-border">
                         <span>Choose a food item</span>
                         <select id="dropdownMenu">
@@ -74,6 +84,12 @@
                         </select>
                     </div>
                 </div>
+            </div>
+            <br/>
+            <div class="consumed-food-details card dark-border row">
+                <div id="foodConsumedTable">
+                </div>
+
             </div>
 
         </div>
