display food consumed table for today

--- a/newtab.html
+++ b/newtab.html
@@ -63,35 +63,36 @@
             </div>
             <br/>
             <div class="row dark-border">
-                <div id="add-food-details">
+                <div class="row">
+                    <div id="add-food-details">
 
-                    <div class="row">
-                        <!--<input type='button' id='addFoodButton' value='Add Food'>-->
-                        <a id="addFoodButton" href="#" class="btn btn-primary a-btn-slide-text">
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                            <span><strong>Add Food</strong></span>
-                        </a>
-                    </div>
-                    <br/>
+                        <div class="row">
+                            <!--<input type='button' id='addFoodButton' value='Add Food'>-->
+                            <a id="addFoodButton" href="#" class="btn btn-primary a-btn-slide-text">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                <span><strong>Add Food</strong></span>
+                            </a>
+                        </div>
+                        <br/>
 
-                    <div class="card dark-border">
-                        <span>Choose a food item</span>
-                        <select id="dropdownMenu">
-                            <option value="plainRoti">1 Plain Roti</option>
-                            <option value="alooParantha">1 Aloo Parantha</option>
-                            <option value="panCake">2 Pan Cakes</option>
-                            <option value="papdiChaat">1 Plate Papdi Chaat</option>
-                        </select>
+                        <div class="card dark-border">
+                            <span>Choose a food item</span>
+                            <select id="dropdownMenu">
+                                <option value="plainRoti">1 Plain Roti</option>
+                                <option value="alooParantha">1 Aloo Parantha</option>
+                                <option value="panCake">2 Pan Cakes</option>
+                                <option value="papdiChaat">1 Plate Papdi Chaat</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <br/>
-            <div class="consumed-food-details card dark-border row">
-                <div id="foodConsumedTable">
+                <br/>
+                <div class="consumed-food-details row">
+                    <div id="foodConsumedTable">
+                    </div>
+
                 </div>
-
             </div>
-
         </div>
     </div>
 
