add functionality to reset food added for current day

--- a/newtab.html
+++ b/newtab.html
@@ -67,11 +67,12 @@
                     <div id="add-food-details">
 
                         <div class="row">
-                            <!--<input type='button' id='addFoodButton' value='Add Food'>-->
                             <a id="addFoodButton" href="#" class="btn btn-primary a-btn-slide-text">
                                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                 <span><strong>Add Food</strong></span>
                             </a>
+                            <input type='button' id='resetFoodForToday' value='Reset'>
+
                         </div>
                         <br/>
 
