add method to updateItemsInDropDownFoodMenu rather than having hard coding in html

--- a/newtab.html
+++ b/newtab.html
@@ -78,11 +78,7 @@
 
                         <div class="card dark-border">
                             <span>Choose a food item</span>
-                            <select id="dropdownMenu">
-                                <option value="plainRoti">1 Plain Roti</option>
-                                <option value="alooParantha">1 Aloo Parantha</option>
-                                <option value="panCake">2 Pan Cakes</option>
-                                <option value="papdiChaat">1 Plate Papdi Chaat</option>
+                            <select id="dropdownFoodMenu">
                             </select>
                         </div>
                     </div>
