add method to updateTotalCaloriesConsumed and display it in a label

--- a/newtab.html
+++ b/newtab.html
@@ -72,6 +72,9 @@
                                 <span><strong>Add Food</strong></span>
                             </a>
                             <input type='button' id='resetFoodForToday' value='Reset'>
+                            <div class="card dark-border">
+                                <h1><span  id="totalCalConsumedToday" class="label label-default">1000</span></h1>
+                            </div>
 
                         </div>
                         <br/>
