add method to add google chart api graphs for calories

--- a/newtab.html
+++ b/newtab.html
@@ -44,11 +44,12 @@
     <hr />
 
     <div class="row">
-        <div class="col-md-8">
-            <div id="calories-consumed-chart-div">
-                <div class="card dark-border">
-                    Calories chart loading...
+        <div class="col-md-8 card dark-border">
+            <div>
+                <div class="row" id="calories-consumed-chart-div">
                 </div>
+                <br/>
+                <div class="row" id="nutrition-chart-div"></div>
             </div>
         </div>
         <br/>
@@ -94,7 +95,6 @@
                 <div class="consumed-food-details row">
                     <div id="foodConsumedTable">
                     </div>
-
                 </div>
             </div>
         </div>
