--- a/newtab.html
+++ b/newtab.html
@@ -57,8 +57,7 @@
             <div class="row">
                 <div id="total-daily-calories-input">
                     <div class="card dark-border">
-                        <h1><span class="label label-default">Label</span></h1>
-
+                        <h1><span class="label label-default">Label for daily max calories</span></h1>
                     </div>
                 </div>
                 <a href="#" class="btn btn-primary a-btn-slide-text">
@@ -99,8 +98,6 @@
             </div>
         </div>
     </div>
-
-
 </div>
 
 </body>
